Filter displayed devices by the membership of the user, according to his user and device groups. An admin user group will be automatically created. Any user is admin, if this admin group is empty for maintenence reasons, if not any user belong to the admin group is admin. All physically present devices are shown to admins, otherwise only devices are shown to the user according to his groups. Only allow users to use devices according to his groups and limitations.
