# lib/db/api.js
@@ -7,6 +7,8 @@ var wireutil = require('../wire/util')
 
 var dbapi = Object.create(null)
 
+const adminsUserGroupTitle = 'Admins'
+
 dbapi.DuplicateSecondaryIndexError = function DuplicateSecondaryIndexError() {
   Error.call(this)
   this.name = 'DuplicateSecondaryIndexError'
@@ -248,6 +250,25 @@ dbapi.loadUserDevices = function(email) {
   }))
 }
 
+dbapi.isUserAllowedToUseAdditionalDevice = function(email) {
+  // All user groups in which the user is contained
+  return db.run(r.table('userGroups').filter(function(ugroup) {
+    return ugroup('userEmails').contains(email)
+  })).then(function(ucursor) {
+    return Promise.promisify(ucursor.toArray, ucursor)()
+      .then(function(userGroups) {
+
+        let maxLimit = Math.max.apply(Math, userGroups.map(function(ugroup){return ugroup.limitOfActivelyUsedDevices;}))
+
+        return db.run(r.table('devices').filter({
+          owner: {
+            email: email
+          }
+        }).count().lt(maxLimit))
+      })
+  })
+}
+
 dbapi.loadUserDevicesFilteredByGroupMembership = function(email) {
   // All user groups in which the user is contained
   return db.run(r.table('userGroups').filter(function(ugroup) {
@@ -272,22 +293,56 @@ dbapi.loadUserDevicesFilteredByGroupMembership = function(email) {
           return Promise.promisify(dcursor.toArray, dcursor)()
             .then(function(deviceGroups) {
               // console.log('deviceGroups: ' + deviceGroups)
-              //
-              // deviceGroups.forEach(function(dgroup) {
-              //   console.log('dgroup: ' + dgroup.title)
-              // })
 
-              var groups = {
-                userGroups: userGroups
-                , deviceGroups: deviceGroups
-              }
-
-              console.log(groups)
-              return groups
+              let serialSet = new Set()
+              deviceGroups.forEach(function(dgroup) {
+                // console.log('dgroup: ' + dgroup.title)
+                dgroup.deviceSerials.forEach(serialSet.add, serialSet)
+                // console.log("dgroup.deviceSerials: " + dgroup.deviceSerials)
+                // dgroup.deviceSerials.forEach(function(serial) {
+                //   console.log("serial: " + serial)
+                // })
+              })
+              let serialArray = Array.from(serialSet)
+              return db.run(r.table('devices').getAll(r.args(serialArray))).then(function(dcursor) {
+                return Promise.promisify(dcursor.toArray, dcursor)()
+                  .then(function(devices) {
+                    return devices
+                  })
+              })
             })
         })
       })
   })
+}
+
+// Creates an admin group if non existent
+// otherwise do nothing
+dbapi.createAdminGroup = function() {
+  db.run(r.table('userGroups')
+    .filter({title: adminsUserGroupTitle})
+    .isEmpty()
+    .do(empty => r.branch(
+      empty, // equivalent of if(empty)
+      r.table('userGroups').insert({
+        title: adminsUserGroupTitle
+        , limitOfActivelyUsedDevices: Number.MAX_SAFE_INTEGER
+        , userEmails: []
+      }), // insert empty admins group
+      null // else do nothing
+    ))
+  )
+}
+
+// Returns whether the user with the passed email address
+// is an admin. A user is an admin if it belongs to the
+// admin user group or if this group is empty
+dbapi.isAdmin = function(email) {
+  return db.run(r.table('userGroups').get(adminsUserGroupTitle)('userEmails').do(
+    function(userEmails) {
+      return userEmails.isEmpty().or(userEmails.contains(email))
+    })
+  )
 }
 
 dbapi.saveDeviceLog = function(serial, entry) {
