# lib/units/api/controllers/user.js
@@ -17,6 +17,8 @@ var log = logger.createLogger('api:controllers:user')
 module.exports = {
   getUser: getUser
 , getUsers: getUsers
+, isUserAdmin: isUserAdmin
+, isUserAllowedToUseAdditionalDevice: isUserAllowedToUseAdditionalDevice
 //, getUserDevices: getUserDevices
 , getUserDevicesFilteredByGroupMembership: getUserDevicesFilteredByGroupMembership
 , addUserDevice: addUserDevice
@@ -51,6 +53,26 @@ function getUsers(req, res) {
       log.error('Failed to load users: ', err.stack)
       res.status(500).json({
         success: false
+      })
+    })
+}
+
+function isUserAdmin(req, res) {
+  return dbapi.isAdmin(req.user.email)
+    .then(function(isAdmin) {
+      res.json({
+        success: true
+        , isAdmin: isAdmin
+      })
+    })
+}
+
+function isUserAllowedToUseAdditionalDevice(req, res) {
+  return dbapi.isUserAllowedToUseAdditionalDevice(req.user.email)
+    .then(function(isAllowed) {
+      res.json({
+        success: true
+        , isAllowed: isAllowed
       })
     })
 }
@@ -95,168 +117,6 @@ function getDeviceBySerial(serial) {
     })
 }
 
-function getDevicesBySerials(serials) {
-  let resolver = Promise.defer()
-  let devices = new Set()
-
-  console.log('getDevicesBySerials: ' + serials.size)
-
-  serials.forEach(function(serial) {
-    getDeviceBySerial(serial).then(function(device) {
-      console.log('getDevicesBySerials: ' + serial)
-      devices.add(device)
-      if (devices.size === serials.size) {
-        resolver.resolve(devices)
-      }
-    })
-  })
-
-  if (devices.size === serials.size) {
-    resolver.resolve(devices)
-  }
-
-  return resolver.promise
-}
-
-// Helper function to create a map, which maps
-// device groups to user group titles.
-function mapDeviceGroupsToUserGroups(deviceGroups) {
-  let map = {}
-  deviceGroups.forEach(function(dgroup) {
-    dgroup.userGroupTitles.forEach(function(utitle) {
-      if (map[utitle] === undefined) {
-        map[utitle] = []
-      }
-      map[utitle].push(dgroup)
-    })
-  })
-
-  return map
-}
-
-/*
-function mapSerialsToDevices(devices) {
-  let map = {}
-  devices.forEach(function(device) {
-    map[device.serial] = device
-  })
-
-  return map
-}
-*/
-function getNumberOfUsagesByGroup(dgroup, serialDeviceMap, tmpSerials, user) {
-  let resolver = Promise.defer()
-  let numUsages = 0
-  let counter = 0
-
-  dgroup.deviceSerials.forEach(function(serial) {
-    let device = serialDeviceMap[serial]
-    if (device === undefined) {
-      getDeviceBySerial(serial).then(function(device) {
-        counter++
-
-        serialDeviceMap[serial] = device
-        datautil.applyOwner(device, user)
-        console.log('getNumberOfUsagesByGroup: device: ' + device.model + ' owner ' + device.owner + ' using: ' + device.using)
-        if (device.using) {
-          numUsages++
-          console.log('Load: ' + numUsages)
-        }
-
-        if (counter === dgroup.deviceSerials.length) {
-          resolver.resolve(numUsages)
-        }
-      })
-    }
-    else {
-      counter++
-      console.log('getNumberOfUsagesByGroup: owner ' + device.owner + ' using: ' + device.using)
-      if (device.using) {
-        numUsages++
-        console.log('No load: ' + numUsages)
-      }
-    }
-
-    tmpSerials.add(serial)
-  })
-
-  if (counter === dgroup.deviceSerials.length) {
-    resolver.resolve(numUsages)
-  }
-
-  return resolver.promise
-}
-
-function getNumberOfUsagesByGroups(dgroups, serialDeviceMap, user) {
-  let resolver = Promise.defer()
-  let numUsages = 0
-  let tmpSerials = new Set()
-  let counter = 0
-
-  dgroups.forEach(function(dgroup) {
-    getNumberOfUsagesByGroup(dgroup, serialDeviceMap, tmpSerials, user).then(function(usages) {
-      counter++
-      numUsages += usages
-
-      console.log('getNumberOfUsagesByGroups: ' + numUsages + ' ' + dgroup.title)
-
-      if (counter === dgroups.length) {
-        resolver.resolve({tmpSerials: tmpSerials, numUsages: numUsages})
-      }
-    })
-  })
-
-  if (counter === dgroups.length) {
-    resolver.resolve({tmpSerials: tmpSerials, numUsages: numUsages})
-  }
-
-  return resolver.promise
-}
-
-function getAllSerials(userGroups, deviceGroups, user) {
-  let resolver = Promise.defer()
-  let serialSet = new Set()
-  let map = mapDeviceGroupsToUserGroups(deviceGroups)
-  let serialDeviceMap = {}
-  let counter = 0
-
-  userGroups.forEach(function(ugroup) {
-    let dgroups = map[ugroup.title]
-
-    if (dgroups !== undefined) {
-      getNumberOfUsagesByGroups(dgroups, serialDeviceMap, user).then(function(data) {
-        counter++
-
-        let tmpSerials = data.tmpSerials
-        let numUsages = data.numUsages
-
-        console.log('getAllSerials: ' + numUsages)
-        if (numUsages < ugroup.limitOfActivelyUsedDevices) {
-
-          tmpSerials.forEach(serialSet.add, serialSet)
-        }
-
-        console.log('getAllSerials: ' + counter + ' ' + userGroups.length)
-
-        if (counter === userGroups.length) {
-          resolver.resolve(serialSet)
-        }
-      })
-    }
-    else {
-      counter++
-    }
-
-  })
-
-  if (counter === userGroups.length) {
-    resolver.resolve(serialSet)
-  }
-
-  return resolver.promise
-}
-
-
 // Returns only the devices, which are assigned by the membership
 // of the user according to its user and device groups.
 // User groups can be assigned to multiple device groups. A user
@@ -264,48 +124,34 @@ function getAllSerials(userGroups, deviceGroups, user) {
 // of multiple devices. A user can only use the devices to which
 // it its user groups are assigned to the device groups. So only
 // the devices of the corresponding device groups can be used.
-// Furhermore, the usage is constrained by a limit of simultaneously
-// used devices per user group.
 function getUserDevicesFilteredByGroupMembership(req, res) {
   var fields = req.swagger.params.fields.value
 
   dbapi.loadUserDevicesFilteredByGroupMembership(req.user.email)
-    .then(function(groups) {
-      // console.log('user: ' + groups)
-      let userGroups = groups.userGroups
-      let deviceGroups = groups.deviceGroups
+    .then(function(list) {
 
-      getAllSerials(userGroups, deviceGroups, req.user).then(function(serialSet) {
-        console.log('getUserDevicesFilteredByGroupMembership')
-        // Load devices
-        getDevicesBySerials(serialSet).then(function(list) {
-
-          let deviceList = []
-          list.forEach(function(device) {
-            console.log('device: ' + device.model + ' ' + device.product)
-            datautil.normalize(device, req.user)
-            let responseDevice = device
-            if (fields) {
-              responseDevice = _.pick(device, fields.split(','))
-            }
-            deviceList.push(responseDevice)
-          })
-
-          console.log('loadUserDevicesFilteredByGroupMembership: deviceList: ' + deviceList)
-
-          res.json({
-            success: true
-            , devices: deviceList
-          })
-
-        })
+      let deviceList = []
+      list.forEach(function(device) {
+        // console.log('device: ' + device.model + ' ' + device.product)
+        datautil.normalize(device, req.user)
+        let responseDevice = device
+        if (fields) {
+          responseDevice = _.pick(device, fields.split(','))
+        }
+        deviceList.push(responseDevice)
       })
-      .catch(function(err) {
-        log.error('Failed to load device list: ', err.stack)
-        res.status(500).json({
-          success: false
-        })
+
+      res.json({
+        success: true
+        , devices: deviceList
       })
+
+  })
+  .catch(function(err) {
+    log.error('Failed to load device list: ', err.stack)
+    res.status(500).json({
+      success: false
+    })
   })
 }
 
